--- a/SignalRWebUI/Views/Shared/Components/_LayoutSidebarPartialComponent/Default.cshtml
+++ b/SignalRWebUI/Views/Shared/Components/_LayoutSidebarPartialComponent/Default.cshtml
@@ -37,17 +37,21 @@
         </div>
         <ul class="nav">
             <li class="nav-item">
-                <a href="index.html">
-                    <i class="la la-dashboard"></i>
-                    <p>Dashboard</p>
-                    <span class="badge badge-count">5</span>
+                <a href="/Default/Index/">
+                    <i class="la la-navicon"></i>
+                    <p>Siteye Git</p>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="components.html">
-                    <i class="la la-table"></i>
+                <a href="index.html">
+                    <i class="la la-dashboard"></i>
+                    <p>Dashboard</p>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="/Menu/Index/">
+                    <i class="la la-link"></i>
                     <p>Menüyü Gör</p>
-                    <span class="badge badge-count">14</span>
                 </a>
             </li>
             <li class="nav-item">
@@ -100,21 +104,45 @@
             </li>
             <li class="nav-item">
                 <a href="/Testimonial/Index/">
-                    <i class="la la-fonticons"></i>
+                    <i class="la la-group"></i>
                     <p>Referanslar</p>
                 </a>
             </li>
             <li class="nav-item">
                 <a href="/SocialMedia/Index/">
-                    <i class="la la-fonticons"></i>
+                    <i class="la la-map-marker"></i>
                     <p>Sosyal Medya</p>
                 </a>
             </li>
             <li class="nav-item">
-                <a href=/Statistic/Index/>
-                    <i class="la la-fonticons"></i>
+                <a href="/Statistic/Index/">
+                    <i class="la la-pie-chart"></i>
                     <p>İstatistikler</p>
-                
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="/MenuTables/Index/">
+                    <i class="la la-opencart"></i>
+                    <p>Masalar</p>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="/MenuTables/GetTableListByStatus/">
+                    <i class="la la-server"></i>
+                    <p>Masa Durumları</p>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="/Message/Index/">
+                    <i class="la la-weixin"></i>
+                    <p>Mesajlar</p>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="Notifications/Index/">
+                    <i class="la la-tty"></i>
+                    <p>Bildirimler</p>
+                </a>
             </li>
             <li class="nav-item">
                 <a href="icons.html">
