--- a/SignalRWebUI/Views/Statistic/Index.cshtml
+++ b/SignalRWebUI/Views/Statistic/Index.cshtml
@@ -340,7 +340,7 @@
                         <div class="row">
                             <div class="col-5">
                                 <div class="icon-big text-center">
-                                    <i class="la la-la-beer"></i>
+                                    <i class="la la-money"></i>
                                 </div>
                             </div>
                             <div class="col-7 d-flex align-items-center">
@@ -397,7 +397,7 @@
                         <div class="row">
                             <div class="col-5">
                                 <div class="icon-big text-center">
-                                    <i class="la la-la-tablet"></i>
+                                    <i class="la la-minus-square"></i>
                                 </div>
                             </div>
                             <div class="col-7 d-flex align-items-center">
