--- a/SignalRWebUI/Views/SocialMedia/Index.cshtml
+++ b/SignalRWebUI/Views/SocialMedia/Index.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/AdminLayout/Index.cshtml";
+    int count = 0;
 }
 
 <div class="content">
@@ -31,8 +32,9 @@
                             <tbody>
                                 @foreach (var item in Model)
                                 {
+                                    count++;
                                     <tr>
-                                        <td>@item.Id</td>
+                                        <th>@count</th>
                                         <td>@item.Title</td>
                                         <td>@item.Url</td>
                                         <td><a href="/SocialMedia/DeleteSocialMedia/@item.Id/" class="btn btn-outline-danger btn-round">Sil</a></td>
