--- a/SignalRWebUI/Views/Testimonial/Index.cshtml
+++ b/SignalRWebUI/Views/Testimonial/Index.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/AdminLayout/Index.cshtml";
     int count = 0;
+    string status = "";
 }
 
 <div class="content">
@@ -33,10 +34,11 @@
                                 @foreach (var item in Model)
                                 {
                                     count++;
+                                    status = item.Status ? "Aktif" : "Pasif";
                                     <tr>
-                                        <td>@count</td>
+                                        <th>@count</th>
                                         <td>@item.FullName</td>
-                                        <td>@item.Status</td>
+                                        <td>@status</td>
                                         <td><a href="/Testimonial/DeleteTestimonial/@item.Id/" class="btn btn-outline-danger btn-round">Sil</a></td>
                                         <td><a href="/Testimonial/UpdateTestimonial/@item.Id/" class="btn btn-outline-warning btn-round">Güncelle</a></td>
                                     </tr>
