--- a/SignalRWebUI/Views/Testimonial/UpdateTestimonial.cshtml
+++ b/SignalRWebUI/Views/Testimonial/UpdateTestimonial.cshtml
@@ -35,7 +35,7 @@
                             </div>
                         </div>
                         <div class="card-action">
-                            <button class="btn btn-primary btn-round">Yorumu Ekle</button>
+                            <button class="btn btn-primary btn-round">Yorumu Güncelle</button>
                             <a href="/Testimonial/Index/" class="btn btn-danger btn-round">Değişikliklerden Vazgeç</a>
                         </div>
                     </div>
