--- a/SignalRWebUI/Views/Shared/Components/_LayoutSidebarPartialComponent/Default.cshtml
+++ b/SignalRWebUI/Views/Shared/Components/_LayoutSidebarPartialComponent/Default.cshtml
@@ -17,18 +17,18 @@
                 <div class="collapse in" id="collapseExample" aria-expanded="true" style="">
                     <ul class="nav">
                         <li>
-                            <a href="#profile">
+                            <a href="/Menu/Index/">
                                 <span class="link-collapse">Menüyü Gör</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#edit">
-                                <span class="link-collapse">Şifre Güncelle</span>
+                            <a href="/Register/Index/">
+                                <span class="link-collapse">Yeni Kayıt</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#settings">
-                                <span class="link-collapse">Ayarlar</span>
+                            <a href="/Login/Index/">
+                                <span class="link-collapse">Giriş Yap</span>
                             </a>
                         </li>
                     </ul>
@@ -38,7 +38,7 @@
         <ul class="nav">
             <li class="nav-item">
                 <a href="/Default/Index/">
-                    <i class="la la-navicon"></i>
+                    <i class="la la-home"></i>
                     <p>Siteye Git</p>
                 </a>
             </li>
@@ -139,20 +139,26 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="Notifications/Index/">
+                <a href="/Notifications/Index/">
                     <i class="la la-tty"></i>
                     <p>Bildirimler</p>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="icons.html">
-                    <i class="la la-fonticons"></i>
+                <a href="/ProgressBars/Index/">
+                    <i class="la la-bar-chart"></i>
+                    <p>Anlık Durum Çubuğu</p>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="/Settings/Index/">
+                    <i class="la la-gears"></i>
                     <p>Ayarlar</p>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="icons.html">
-                    <i class="la la-fonticons"></i>
+                <a href="/Login/LogOut/">
+                    <i class="la la-times-circle"></i>
                     <p>Çıkış Yap</p>
                 </a>
             </li>
