--- a/SignalRWebUI/Views/Shared/Components/_MenuNavbarPartialComponent/Default.cshtml
+++ b/SignalRWebUI/Views/Shared/Components/_MenuNavbarPartialComponent/Default.cshtml
@@ -21,7 +21,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/Default/Index/">Ana Sayfa </a>
                         </li>
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link" href="/Menu/Index/">Menü <span class="sr-only">(current)</span> </a>
                         </li>
                         <li class="nav-item">
