--- a/SignalRWebUI/Views/_ViewImports.cshtml
+++ b/SignalRWebUI/Views/_ViewImports.cshtml
@@ -13,4 +13,5 @@
 @using SignalRWebUI.ViewModels.NotificationViewModels
 @using SignalRWebUI.ViewModels.MenuTableViewModels
 @using SignalRWebUI.ViewModels.IdentityViewModels
+@using SignalRWebUI.ViewModels.MessageViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
