--- a/SignalRWebUI/Views/Shared/Components/_UILayoutFooterPartialComponent/Default.cshtml
+++ b/SignalRWebUI/Views/Shared/Components/_UILayoutFooterPartialComponent/Default.cshtml
@@ -1,6 +1,7 @@
 ﻿@model List<ResultContactViewModel>
 
-@foreach(var item in Model){
+@foreach (var item in Model)
+{
     <footer class="footer_section">
         <div class="container">
             <div class="row">
@@ -39,23 +40,7 @@
                         <p>
                             @item.FooterDescription
                         </p>
-                        <div class="footer_social">
-                            <a href="">
-                                <i class="fa fa-facebook" aria-hidden="true"></i>
-                            </a>
-                            <a href="">
-                                <i class="fa fa-twitter" aria-hidden="true"></i>
-                            </a>
-                            <a href="">
-                                <i class="fa fa-linkedin" aria-hidden="true"></i>
-                            </a>
-                            <a href="">
-                                <i class="fa fa-instagram" aria-hidden="true"></i>
-                            </a>
-                            <a href="">
-                                <i class="fa fa-pinterest" aria-hidden="true"></i>
-                            </a>
-                        </div>
+                        @await Component.InvokeAsync("_UILayoutSocialMediaPartialComponent")
                     </div>
                 </div>
                 <div class="col-md-4 footer-col">
