mail section completed

--- a/SignalRWebUI/Views/_ViewImports.cshtml
+++ b/SignalRWebUI/Views/_ViewImports.cshtml
@@ -14,4 +14,5 @@
 @using SignalRWebUI.ViewModels.MenuTableViewModels
 @using SignalRWebUI.ViewModels.IdentityViewModels
 @using SignalRWebUI.ViewModels.MessageViewModels
+@using SignalRWebUI.ViewModels.MailViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
