--- a/SignalRWebUI/Views/Shared/Components/_LayoutSidebarPartialComponent/Default.cshtml
+++ b/SignalRWebUI/Views/Shared/Components/_LayoutSidebarPartialComponent/Default.cshtml
@@ -157,8 +157,20 @@
                 </a>
             </li>
             <li class="nav-item">
+                <a href="/QRCode/Index/">
+                    <i class="la la-qrcode"></i>
+                    <p>QR Kod Oluştur</p>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="/Mail/Index/">
+                    <i class="la la-adn"></i>
+                    <p>Mail İşlemleri</p>
+                </a>
+            </li>
+            <li class="nav-item">
                 <a href="/Login/LogOut/">
-                    <i class="la la-times-circle"></i>
+                    <i class="la la-plane"></i>
                     <p>Çıkış Yap</p>
                 </a>
             </li>
